# damn-vulnerable-solana

./: Cargo.toml  README.md
.github/workflows/: verify.yml
challenges/wallet-what-wallet/: Cargo.toml  description.md  hint.md  solution.md
challenges/wallet-what-wallet/src/: instruction.rs  lib.rs  processor.rs  state.rs
challenges/wallet-what-wallet/tests/: wallet-what-wallet.rs
