[workspace]
resolver = "2" # Adding explicit resolver version

# Add your challenges here as workspace members
members = [
    "challenges/wallet-what-wallet",
]

# Common dependencies for all challenges
[workspace.dependencies]
solana-program = "2.2.1"
borsh = "1.5.7"
borsh-derive = "1.5.7"
solana-program-test = "2.2.6"
solana-sdk = "2.2.2"
tokio =  "1.44.1"