[package]
name = "wallet-what-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = { workspace = true }
borsh = { workspace = true }
borsh-derive = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true } 

[features]
custom-panic = []
custom-heap = []